Search orchestrator properties and POM
Signed-off-by: mariano.barcia <mariano.barcia@gmail.com>